--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "express": "^4.21.1",
     "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "prettier": "^3.4.2",
