--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,20 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "eslint": "^9.16.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.4.2",
     "zod": "^3.23.8"
   }
