--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.16.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -26,10 +27,12 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.4.2",
+    "redis": "^4.7.0",
     "zod": "^3.23.8"
   }
 }
